--- a/ws/gl-sport-tracker/yo/app/styles/main.scss
+++ b/ws/gl-sport-tracker/yo/app/styles/main.scss
@@ -109,7 +109,9 @@ body {
 #main-content{
 	width:79%;
 float:right;
-display:inline-block;}
+display:inline-block;
+	margin-left:5px;
+}
 
 .normal-input{
 	width:150px;
