--- a/ws/gl-sport-tracker/yo/app/views/login.html
+++ b/ws/gl-sport-tracker/yo/app/views/login.html
@@ -1,18 +1,34 @@
-<div class="do-marginLeft">
-  	<h3 style="text-align:center">Authentification</h3>
-  	
-  	<p style="text-align:center"> Cette page nécessite une authentification </p>
-  	<p style="color:red; font-weight:bold" ng-show="incorrect">Identifiant ou mot de passe incorrect</p>
-	<form name='loginForm' ng-submit="connexion(loginForm)">
-	 	Login: <input name='login' class="normal-input" required type='email' ng-model='user.login'/> <br />
-	 	<span ng-show='loginForm.login.$dirty && loginForm.login.$error.required' class="error">A login is required</span>
-	  	<span ng-show='loginForm.login.$error.email' class="error">Your login should be a valid email</span>
-	 	<br />
-	  	
-	  	Mot de passe: <input name='password' type='password' required class="normal-input" ng-model='user.password'/><br /><br />  
-	 
-		<input ng-disabled="loginForm.$invalid" class="btn btn-primary btn-lg" type="submit" value="Se connecter">
-	 </form>
+<div>
+<p class="error" style="text-align:center; font-size:15px;" ng-show="erreurServeur">Une erreur interne a été rencontrée. Merci de réessayer</p>
+		
+	<div class="header">
+		<h3 class="text-muted" style="margin-top: 0;">Authentification</h3>
+	</div>
 
- 	<a href="/create" alt="Creer un compte" />Pas encore de compte?</a>
- </div>
+	<p style="text-align: center">Cette page nécessite une authentification</p>
+	<p style="color: red; font-weight: bold" ng-show="badLogin">Identifiant	ou mot de passe incorrect</p>
+
+	<form name='loginForm' ng-submit="connexion(loginForm)">
+		<div style="display: inline-block; width: 40%">
+			Login <br /> 
+			<input name='login' class="normal-input" required type='email' ng-model='infosConnexion.login' /> <br />
+			<span ng-show='loginForm.login.$dirty && loginForm.login.$error.required' class="error">Une adresse email est nécessaire</span>
+		 	<span ng-show='loginForm.login.$error.email' class="error">Adresse email incorrect</span><br />  Mot de passe <br />
+		 	
+			<input name='password' type='password' required class="normal-input" ng-model='infosConnexion.password' /><br />
+		</div>
+		<div style="display: inline-block; width: 40%;">
+
+ 	<button type="submit" style="margin-top:10px;" class="btn btn-success" ng-disabled="loginForm.$invalid">Se connecter</button><br />
+	 
+
+			
+			<a href="#create" alt="Creer un compte">Pas encore de compte?</a>
+		</div>
+
+
+	</form>
+
+
+
+</div>
