Ajout gestions des sessions Ajout page « Amis » Modification « Accueil » Correction bug divers

--- a/ws/gl-sport-tracker/yo/app/views/main/accueil.html
+++ b/ws/gl-sport-tracker/yo/app/views/main/accueil.html
@@ -5,6 +5,14 @@
   	<h3 class="text-muted" style="margin-top:0;">Accueil</h3>
   </div>
 </div>
-Bonjour {{user.firstName}} !
+Bonjour {{user.firstName}} ! <br /><br />
 
-Vous avez effectué {{user.sessions.length}} jusqu'à maintenant !
+Vous avez effectué {{user.sessions.length}} sessions jusqu'à maintenant ! <br /><br />
+
+<ul>
+<li> <a href="#profil">Retrouver les informations de votre profil.</a> </li><br />
+<li> <a href="#sessions">Consulter et démarrer des sessions </a></li><br />
+<li> <a href="#amis">Retrouver vos amis</a> </li>
+</ul>
+
+
