--- a/ws/gl-sport-tracker/yo/app/views/main/accueil.html
+++ b/ws/gl-sport-tracker/yo/app/views/main/accueil.html
@@ -7,7 +7,7 @@
 </div>
 Bonjour {{user.firstName}} ! <br /><br />
 
-Vous avez effectué {{user.sessions.length}} sessions jusqu'à maintenant ! <br /><br />
+Vous avez effectué {{sessions.length}} sessions jusqu'à maintenant ! <br /><br />
 
 <ul>
 <li> <a href="#profil">Retrouver les informations de votre profil.</a> </li><br />
